update: 섹션 1. 코틀린에서 변수와 타입, 연산자를 다루는 방법 - 4강. 코틀린에서 연산자를 다루는 방법

--- a/01. Development/02. Lecture/자바 개발자를 위한 코틀린 입문/섹션 1. 코틀린에서 변수와 타입, 연산자를 다루는 방법.md
+++ b/01. Development/02. Lecture/자바 개발자를 위한 코틀린 입문/섹션 1. 코틀린에서 변수와 타입, 연산자를 다루는 방법.md
@@ -589,12 +589,129 @@ val ch = str[1]
 
 # 4강. 코틀린에서 연산자를 다루는 방법
 
+## 1. 단항 연산자 / 산술 연살자
+
+- Java 와 Kotlin 모두 같다.
+
+```
+++, --
++, -, *, /, %
++=, -=, *=, /=, %=
+```
+
+## 2. 비교 연산자와 동등성, 동일성
+
+- Java 와 Kotlin 모두 같다.
+
+```
+>, <, >=, <=
+```
+
+### 객체 비교 : compareTo 와 비교 연산자
+
+- 다만 Kotlin 에서는 객체를 비교할 때 비교 연산자를 사용하면 자동으로 `compareTo` 를 호출한다.
+- `money1 > money2` 에서 `>` 를 `cmd+click` 하면 JavaMoney 의 `compareTo` 메서드로 이동한다.
+
+```java
+JavaMoney money1 = new JavaMoney(2_000L);  
+JavaMoney money2 = new JavaMoney(1_000L);  
+  
+if (money1.compareTo(money2) > 0) {  
+    System.out.println("Money1 이 Money2 보다 금액이 크다.");  
+}
+```
+
+```kotlin
+val money1 = JavaMoney(2_000L)  
+val money2 = JavaMoney(1_000L)  
+  
+if (money1 > money2) {  
+    println("Money1 이 Money2 보다 금액이 크다.")  
+}
+```
+
+### 동등성과 동일성 비교
+
+- Java 에서는 동일성에 == 를 사용, 동등성에 equals 를 직접 호출
+- Kotlin 에서는 동일성에 === 를 사용, 동등성에 == 를 호출
+	- == 를 사용하면 간접적으로 equals 를 호출해준다.
 
 
+## 3. 논리 연산자 / 코틀린에 있는 특이한 연산자
 
+- Java 와 Kotlin 모두 같다.
+- Kotlin 에서도 Java 처럼 Lazy 연산을 수행한다.
 
+### `in`, `!in`
 
+- 컬렉션이나 범위에 포함되어 있다, 포함되어 있지 않다.
 
+```kotlin
+println(1 in numbers)
+```
 
+### `a..b`
 
+- a 부터 b 까지의 범위 객체를 생성한다.
 
+### `a[i]`
+
+- a 에서 특정 Index i 로 값을 가져온다.
+
+### `a[i] = b` 
+
+- a 의 특정 index i 에 b 를 넣는다.
+
+## 4. 연산자 오버로딩
+
+- Kotlin 에서는 객체마다 연산자를 직접 정의할 수 있다.
+- 플러스 연산, 마이너스 연산, 단항 연산, 비교 연산 등 모든 연산을 정의할 수 있는 것이다.
+
+### Java 코드
+
+```java
+public class Main() {
+	public static void main() {
+		JavaMoney money1 = new JavaMoney(1_000L);  
+		JavaMoney money2 = new JavaMoney(2_000L);
+		System.out.println(money1.plus(money2));
+	}
+}
+```
+
+```java
+public class JavaMoney implements Comparable<JavaMoney> {  
+  
+    private final long amount;  
+  
+    public JavaMoney(long amount) {  
+        this.amount = amount;  
+    }  
+  
+    public JavaMoney plus(JavaMoney other) {  
+        return new JavaMoney(this.amount + other.amount);  
+    }
+    ...
+}
+
+```
+
+### Kotlin 코드
+
+```kotlin
+fun main() {
+	val money1 = Money(1_000L)
+	val money2 = Money(2_000L)
+	println(money1 + money2) // Money(amont=3000) - toString 결과값
+}
+```
+
+```kotlin
+data class Money (  
+    val amount: Long  
+){  
+    operator fun plus(other: Money): Money {  
+        return Money(this.amount + other.amount)  
+    }  
+}
+```
