--- a/01. Development/02. Lecture/자바 개발자를 위한 코틀린 입문/섹션 2. 코틀린에서 코드를 제어하는 방법.md
+++ b/01. Development/02. Lecture/자바 개발자를 위한 코틀린 입문/섹션 2. 코틀린에서 코드를 제어하는 방법.md
@@ -210,11 +210,82 @@ fun judgeNumber2(number: Int) {
 
 # 6강. 코틀린에서 반복문을 다루는 방법
 
+## 1. for-each문
 
+### Java 코드
 
+```java
+List<Long> numbers = Arrays.asList(1L, 2L, 3L);
+for (long number : numbers) {
+	System.out.println(number);
+}
+```
 
+### Kotlin 코드
+
+```kotlin
+val numbers = listOf(1L, 2L, 3L)
+for (number in numbers) {
+	println(number)
+}
+```
+
+- in 에는 java 와 동일하게 Iterable 이 구현된 타입이라면 모두 들어갈 수 있다.
+
+## 2. 전통적인 for문 & Progression 과 Range
+
+### Java 코드
+
+```java
+for (int i = 1; i <= 3; i++) {
+	System.out.println(i);
+}
+for (int i = 3; i>= 1; i--) {
+	System.out.println(i);
+}
+for (int i = 1; i <= 5; i += 2) {
+	System.out.println(i);
+}
+```
+
+### Kotlin 코드
+
+> [!note]
+> Kotlin 에서 전통적인 for 문은 등차수열을 이용한다.
+
+- `..` 은 범위를 만들어 내는 연산자
+	- `1..3` : 1 부터 3 의 범위
+	- 실제로 Range 라는 클래스가 있고, 이 클래스는 Progression 이라는 클래스를 상속받고 있다.
+- 올리지 않고 내리고 싶다면 `downTo` 를 쓰면 된다.
+- 1 씩 올리는 것이 아닌 2씩 올리려면 `step` 을 쓰면 된다.
+
+- `downTo` 와 `step` 은 모두 함수이다. (중위 함수 호출)
+	- `변수.함수이름(argument)` 대신 `변수 함수이름 argument` 를 쓴것 뿐이다.
+
+```kotlin
+for (i in 1..3) {
+	println(i)
+}
+for (i in 3 downTo 1) {
+	println(i)
+}
+for (i in 1..5 step 2) {
+	println(i)
+}
+```
+
+## 3. while 문
+
+- Java 와 동일하다. do-while 도 동일
 
 # 7장. 코틀린에서 예외를 다루는 방법
+
+
+
+
+
+
+
 
 
 
