--- a/01. Development/02. Lecture/자바 개발자를 위한 코틀린 입문/섹션 2. 코틀린에서 코드를 제어하는 방법.md
+++ b/01. Development/02. Lecture/자바 개발자를 위한 코틀린 입문/섹션 2. 코틀린에서 코드를 제어하는 방법.md
@@ -280,18 +280,78 @@ for (i in 1..5 step 2) {
 
 # 7장. 코틀린에서 예외를 다루는 방법
 
+## 1. try catch finally 구문
 
+### Java 코드
 
+```java
+private int parseIntOrThrow(@NotNull String str) {
+	try {
+		return Integer.parseInt(str);
+	} catch (NumberFormatException e) {
+		throw new IllegalArgumentException(String.format("주어진 %s는 숫자가 아닙니다", str));
+	}
+}
 
+private Integer parseIntOrThrowV2(@NotNull String str) {
+	try {
+		return Integer.parseInt(str);
+	} catch (NumberFormatException e) {
+		return null;
+	}
+}
+```
 
+### Kotlin 코드
 
+- try catch finally 문법 자체는 Java 와 Kotlin 모두 동일하다.
+- 다만 try catch 도 if-else 처럼 하나의 Expression 으로 간주된다.
 
+```kotlin
+fun parseIntOrThrow(str: String): Int {
+	try {
+		return str.toInt()
+	} catch (e: NumberFormatException) {
+		throw IllegalArgumentException("주어진 ${str}는 숫자가 아닙니다")
+	}
+}
 
+fun parseIntOrThrowV2(str: String): Int? {
+	return try {
+		str.toInt()
+	} catch (e: NumberFormatException) {
+		null
+	}
+}
+```
 
+## 2. Checked Exception 과 Unchecked Exception
 
+- Kotlin 에서는 Checked Exception 과 Unchecked Exception 을 구분하지 않는다.
+- 모두 Unchecked Exception 이다.
+- 그래서 throws 를 붙여주지 않아도 오류가 나지 않는다.
 
+## 3. try with resources
+
+- Kotlin 에서는 try with resources 구문이 없다.
+- 대신 `use` 라는 inline 확장함수를 사용한다.
+
+```kotlin
+fun readFile(path: String) {
+	BufferedReader(FileReader(path)).use { reader ->
+		println(reader.readLine())
+	}
+}
+```
 
 # 8장. 코틀린에서 함수를 다루는 방법
+
+
+
+
+
+
+
 
 
 
