update: 섹션 2. 코틀린에서 코드를 제어하는 방법 - 8강. 코틀린에서 함수를 다루는 방법

--- a/01. Development/02. Lecture/자바 개발자를 위한 코틀린 입문/섹션 2. 코틀린에서 코드를 제어하는 방법.md
+++ b/01. Development/02. Lecture/자바 개발자를 위한 코틀린 입문/섹션 2. 코틀린에서 코드를 제어하는 방법.md
@@ -335,6 +335,7 @@ fun parseIntOrThrowV2(str: String): Int? {
 
 - Kotlin 에서는 try with resources 구문이 없다.
 - 대신 `use` 라는 inline 확장함수를 사용한다.
+- Kotlin 의 언어적 특징을 활용해 close 를 호출해주는 것이다.
 
 ```kotlin
 fun readFile(path: String) {
@@ -346,14 +347,145 @@ fun readFile(path: String) {
 
 # 8장. 코틀린에서 함수를 다루는 방법
 
+## 1. 함수 선언 문법
 
+### Java 코드
 
+```java
+public int max(int a, int b) {
+	if (a > b) {
+		return a;
+	}
+	return b;
+}
+```
 
+### Kotlin 코드 1
 
+- 접근 지시어 public 은 생략 가능하다.
+- fun 은 함수를 의미하는 키워드
+- max 는 함수 이름. 즉, 접근지시어
+- 반환 타입이 Unit 인 경우 생략 가능
 
+```kotlin
+fun max(a: Int, b: Int): Int {
+	if (a > b) {
+		return a
+	}
+	return b
+}
+```
 
+### Kotlin 코드 2
 
+- if 문은 Expression 이기 때문에 아래와 같이 쓸 수 있다.
 
+```kotlin
+fun max(a: Int, b: Int): Int {
+	return if (a > b) {
+		a
+	} else {
+		b
+	}
+}
+```
 
+### Kotlin 코드 3
 
+- 함수가 하나의 결과값이면 block 대신 = 을 사용 가능하다.
+- 위 코드에서 다시 중활호를 없애고 = 으로 바꾸었다.
 
+```kotlin
+fun max(a: Int, b: Int): Int =
+	if (a > b) {
+		a
+	} else {
+		b
+	}
+```
+
+### Kotlin 코드 4
+
+- 여러줄로 하지 않고 한줄로 변경이 가능하다
+- if-else 에서 a 또는 b 를 반환하는데 둘 모두 Int 타입이고, 이럴 때는 코틀린이 자동으로 리턴타입을 추론할 수 있기 때문에 반환타입을 생략할 수 있다.
+	- 타입이 생략가능한 문법적 이유는 함수를 쓸 때 중괄호 대신 = 를 썼기 때문이다.
+	- block { } 을 사용하는 경우에는 반환 타입이 Unit 이 아니면, 명시적으로 작성해주어야 한다.
+- 그리고 중괄호도 생략 가능하다.
+
+```kotlin
+fun max(a: Int, b: Int): Int  = if (a > b) a else b
+```
+
+```kotlin
+fun max(a: Int, b: Int) = if (a > b) a else b
+```
+
+> [!note]
+> 함수는 클래스 안에 있을 수도, 파일 최상단에 있을 수도 있다.
+> 또한, 한 파일 안에 여러 함수들이 있을 수도 있다.
+
+## 2. default parameter
+
+- 기본값을 넣어주어서 해당 파라미터는 생략을 해도 된다.
+
+```kotlin
+fun main() {
+	repeat("Hello World")
+}
+
+fun repeat(
+	str: String, 
+	num: Int = 3, 
+	useNewLine: Boolean = true
+) {
+	for (i in 1..num) {
+		if (useNewLine) {
+			println(str)
+		} else {
+			println(str)
+		}
+	}
+}
+```
+
+## 3. named argument (parameter)
+
+- 위에서 2번째 파라미터는 기본값을 쓰고, 3번째 파라미터만 바꾸고 싶다면 named parameter 를 쓰면 된다.
+- 매개변수 이름을 통해 직접 지정하는 것이다.
+- 지정되지 않은 매개변수는 기본값을 사용한다.
+- 이로써 builder 를 직접 만들지 않고 builder 의 장점을 가지게 된다.
+
+```kotlin
+fun main() {
+	repeat("Hello World", useNewLine = false)
+}
+```
+
+- Kotlin 에서 Java 함수를 가져다 사용할 때는 named argument 를 사용할 수 없다.
+	- Java 코드가 바이트코드로 변환되었을 때 parameter 이름을 보존하고 있지 않으니까.
+
+## 4. 같은 타입의 여러 파라미터 받기 (가변인자)
+
+- Kotlin 에서는 가변인자 parameter 를 만들어 줄 때 ... 을 쓰지 않는다.
+- 대신 vararg 를 써준다.
+
+```kotlin
+fun printAll(vararg strings: String) {
+	for (str in strings) {
+		println(str)
+	}
+}
+```
+
+- 가변인자 argument 를 사용할 떄는 쉼표로 인자를 나누어주거나 배열을 넣어준다.
+- 다만 배열을 가변인자에 넣어줄 때 앞에 별표를 붙여줘야 한다.
+	- 여기서 별표는 spread 연산자라 해서 배열 안에 있는 것들을 쉽표를 쓰는 것 처럼 꺼내준다
+
+```kotlin
+fun main() {
+	printAll("A", "B", "C")
+
+	val array = arrayOf("A", "B", "C")
+	printAll(*array)
+}
+```
