update: 섹션 3. 코틀린에서의 OOP - 10강. 코틀린에서 상속을 다루는 방법

--- a/01. Development/02. Lecture/자바 개발자를 위한 코틀린 입문/섹션 3. 코틀린에서의 OOP.md
+++ b/01. Development/02. Lecture/자바 개발자를 위한 코틀린 입문/섹션 3. 코틀린에서의 OOP.md
@@ -206,13 +206,328 @@ class Person(
 
 # 10강. 코틀린에서 상속을 다루는 방법
 
+## 1. 추상 클래스
 
+### 예제 1
 
+#### Java 코드
 
+```java
+public abstract class JavaAnimal {  
+  
+    protected final String species;  
+    protected final int legCount;  
+  
+    public JavaAnimal(String species, int legCount) {  
+        this.species = species;  
+        this.legCount = legCount;  
+    }  
+  
+    abstract public void move();  
+  
+    public String getSpecies() {  
+        return species;  
+    }  
+  
+    public int getLegCount() {  
+        return legCount;  
+    }  
+  
+}
+```
 
+#### Kotlin 코드
 
+```kotlin
+abstract class Animal(  
+    protected val species: String,  
+    protected val legCount: Int,  
+) {  
+    abstract fun move()  
+}
+```
+
+### 예제 2
+
+#### Java 코드
+
+```java
+public class JavaCat extends JavaAnimal {  
+  
+    public JavaCat(String species) {  
+        super(species, 4);  
+    }  
+  
+    @Override  
+    public void move() {  
+        System.out.println("고양이가 사뿐 사뿐 걸어가~");  
+    }  
+  
+}
+```
+
+#### Kotlin 코드
+
+- Kotlin 에서 상속은 : 을 쓴다.
+- 타입을 쓸 때도 : 을 쓰고 상속을 받을 떄도 : 을 쓴다.
+	- convention 의 차이는 있다.
+		- 타입을 쓸 때는 변수명에서 한 칸 뛰지 않고 : 을 붙인다.
+		- 어떤 걸 상속받을 떄는 한 칸 뛰고 : 을 붙인다.
+
+- Kotlin 에서는 어떤 클래스를 상속받을 때 상위 클래스의 생성자를 바로 호출해야 한다.
+
+- Kotlin 에서는 override 라는 annotation 이 아닌 지시어를 사용해야 하며 필수로 붙여줘야 한다.
+
+```kotlin
+class Cat(  
+    species: String  
+) : Animal(species, 4) {  
+  
+    override fun move() {  
+        println("고양이가 사뿐 사뿐 걸어가~")  
+    }  
+}
+```
+
+### 예제 3
+
+#### Java 코드
+
+```java
+public final class JavaPenguin extends JavaAnimal {  
+  
+    private final int wingCount;  
+  
+    public JavaPenguin(String species) {  
+        super(species, 2);  
+        this.wingCount = 2;  
+    }  
+  
+    @Override  
+    public void move() {  
+        System.out.println("펭귄이 움직입니다~ 꿱꿱");  
+    }  
+  
+    @Override  
+    public int getLegCount() {  
+        return super.legCount + this.wingCount;  
+    }
+  
+}
+```
+
+#### Kotlin 코드
+
+```kotlin
+class Penguin(  
+    species: String  
+) : Animal(species, 2) {  
+  
+    private val wingCount: Int = 2  
+  
+    override fun move() {  
+        println("펭귄이 움직입니다~ 꿱꿱")  
+    }  
+  
+    override val legCount: Int  
+        get() = super.legCount + this.wingCount  
+}
+```
+
+- 그런데 위와 같이 쓰면 `override val legCount: Int` 의 `override` 아래에 컴파일 에러가 난다.
+- Kotlin 에서는 Java 와 다르게 프로퍼티를 override 할 때 무조건 open 을 붙여주어야 한다.
+	- 추상 프로퍼티가 아니라면, 상속받을 때 open 을 꼭 붙여야 한다.
+- 그래서 `protected open val legCount: Int` 에 `open` 을 넣어서 컴파일 에러를 없앴다.
+
+```kotlin
+abstract class Animal(  
+    protected val species: String,  
+    protected open val legCount: Int,  
+) {  
+    abstract fun move()  
+}
+```
+
+- Java 와 Kotlin 모두 추상 클래스는 인스턴스화 할 수 없다.
+
+## 2. 인터페이스
+
+### Java 코드
+
+```java
+public interface JavaFlyable {  
+  
+    default void act() {  
+        System.out.println("파닥 파닥");  
+    }  
+  
+}
+```
+
+```java
+public interface JavaSwimable {  
+  
+    default void act() {  
+        System.out.println("어푸 어푸");  
+    }  
+  
+}
+```
+
+```java
+public final class JavaPenguin extends JavaAnimal implements JavaSwimable, JavaFlyable {  
+  
+    @Override  
+    public void act() {  
+        JavaSwimable.super.act();  
+        JavaFlyable.super.act();  
+    }  
+  
+}
+```
+
+### Kotlin 코드
+
+- default 를 쓰지 않아도 default 함수를 만들 수 있다.
+- 추상메서드를 쓰고 싶다면 그냥 `fun act2()` 와 같이 body 없이 쓰면 된다.
+
+```kotlin
+interface Flyable {  
+  
+    fun act() {  
+        println("파닥 파닥")  
+    }
+  
+}
+```
+
+```kotlin
+interface Swimable {  
+  
+    fun act() {  
+        println("어푸 어푸")  
+    }  
+  
+}
+```
+
+- Kotlin 에서 인터페이스를 구현하고 싶다면 상속과 마찬가지로 : 을 쓰면 된다.
+- 특정 상위 인터페이스의 함수를 override 할 때 문법이 달라졌다.
+	- Java 는 `인터페이스타입.super.메소드` 인데,
+	- Kotlin 은 `super<타입>.함수` 이다.
+
+```kotlin
+class Penguin(  
+    species: String  
+) : Animal(species, 2), Swimable, Flyable {  
+  
+    private val wingCount: Int = 2  
+  
+    override fun move() {  
+        println("펭귄이 움직입니다~ 꿱꿱")  
+    }  
+  
+    override val legCount: Int  
+        get() = super.legCount + this.wingCount  
+  
+    override fun act() {  
+        super<Swimable>.act()  
+        super<Flyable>.act()  
+    }  
+}
+```
+
+- Java, Kotlin 모두 인터페이스를 인스턴스화 할 수 없다.
+- Kotlin 에서는 backing field 가 없는 프로퍼티를 Interface 에 만들 수 있다.
+	- 아래와 같이 Swimable 인터페이스에 프로퍼티를 만들 수 있다.
+	- 이 프로퍼티는 Swimable 에 field 가 있는 것이 아니라, getter 에 대한 것을 구현체에서 구현해주는 것을 기대하는 것이다.
+- 이처럼 프로터피라는 것이 field 라는 것도 있지만 getter 라는 것도 있기 때문에 getter 에 대한 default 메소드나 getter 에 대한 추상 메소드를 인터페이스에 만드는 것이라 이렇게 backing field 없는 프로퍼티를 인터페이스에 만들 수 있다.
+
+```kotlin
+interface Swimable {  
+  
+    val swimAbility: Int
+	    get() = 3 // 이렇게 기본값을 넣어줄 수도 있다. 기본값이 있으면 오버라이드를 안해도 된다.
+  
+    fun act() {  
+        println("어푸 어푸")  
+    }  
+  
+}
+```
+
+```kotlin
+class Penguin(  
+    species: String  
+) : Animal(species, 2), Swimable, Flyable {  
+  
+    ...
+	override val swimAbility: Int
+		get() = 3
+}
+```
+
+## 3. 클래스를 상속할 때 주의점
+
+- 아래 Derived 객체를 생성하면 어떻게 될까?
+
+```kotlin
+open class Base( // 다른 클래스가 Base 클래스를 상속할 수 있게 open 해주었다.
+    open val number: Int = 100 // number 프로퍼티도 open 하여 override 할 수 있게 open 해주었다.
+) {  
+    init {  
+        println("Base Class")  
+        println(number)  
+    }  
+}
+```
+
+```kotlin
+class Derived(  
+    override val number: Int  
+) : Base(number) {  
+    init {  
+        println("Derived Class")  
+    }  
+}
+```
+
+```
+Base Class
+0
+Derived Class
+```
+
+- 상위 클래스에서 하위 클래스가 override 하고 있는 프로퍼티를 생성자 블락이나 init 블락을 쓰게 되면 예상치 못한 값이 나올 수 있다.
+- 위 같은 경우는 Base Class 의 생성자가 실행되면서 하위 클래스가 override 하고 있는 number 에 접근해서 출력하려 하는데, 아직 하위 클래스인 Drived 의 number 가 초기화되지 않기 때문에 0 이 나온 것이다.
+- 따라서 상위 클래스의 생성자에서는 하위 클래스에서 override 하고 있는 프로퍼티에 접근하면 안된다. (final 프로퍼티는 제외)
+
+> [!tip]
+> 상위 클래스를 설계할 떄 생성자 또는 초기화 블록에 사용되는 프로퍼티에는 open 을 피해야 한다.
+
+- 추상 멤버가 아니면 기본적으로 오버라이드가 불가능하다.
+	- open 을 사용해주어야 한다.
+
+## 4. 상속 관련 지시어 정리
+
+1. final : override 를 할 수 없게 한다. default 로 보이지 않게 존재한다.
+2. open : override 를 열어 준다.
+3. abstract : 반드시 override 해야 한다.
+4. override : 상위 타입을 오버라이드 하고 있다.
 
 # 11강. 코틀린에서 접근 제어를 다루는 방법
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
