update: 08장. TCP 프로그래밍

--- a/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/08장. TCP 프로그래밍.md
+++ b/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/08장. TCP 프로그래밍.md
@@ -149,6 +149,7 @@ public class EchoServer {
 > [!important] 출력할 때 `flush()` 메소드 호출을 잊지 말자
 > - 네트워크 프로그래밍의 경우, 출력한 후에는 반드시 `flush()` 메소드를 호출해줘야 한다.
 > - `flush()` 메소드를 호출하지 않을 경우에는 실제로 전송이 안되는 경우가 발생할 수 있다.
+> - `\n` 개행문자, 버퍼가 꽉찼을때, close 메서드 호출했을 때 flush 호출된다.
 
 ## 2. 에코 클라이언트 프로그래밍
 
