--- a/01. Development/02. Lecture/자바 개발자를 위한 코틀린 입문/섹션 3. 코틀린에서의 OOP.md
+++ b/01. Development/02. Lecture/자바 개발자를 위한 코틀린 입문/섹션 3. 코틀린에서의 OOP.md
@@ -517,22 +517,135 @@ Derived Class
 
 # 11강. 코틀린에서 접근 제어를 다루는 방법
 
+## 1. 자바와 코틀린의 가시성 제어
 
+### Java 의 가시성 제어
 
+- public : 모든 곳에서 접근 가능
+- protected : 같은 패키지 또는 하위 클래스에서만 접근 가능
+- default : 같은 패키지에서만 접근 가능
+- private : 선언된 클래스 내에서만 접근 가능
 
+### Kotlin 의 가시성 제어
 
+- public : 모든 곳에서 접근 가능
+- protected : 선언된 클래스 또는 하위 클래스에서만 접근 가능
+	- 같은 패키지에서는 접근이 불가능하다.
+- internal : 같은 모듈에서만 접근 가능
+- private : 선언된 클래스 내에서만 접근 가능
 
+> [!tip]
+> Kotlin 에서는 패키지를 namespace 를 관리하기 위한 용도로만 사용!
+> 가시성 제어에는 사용되지 않는다.
 
+> [!note] 모듈이란
+> 한 번에 컴파일 되는 Kotlin 코드
+	- IDEA Module
+	- Maven Project
+	- Gradle Source Set
+	- `Ant Task <kotlinc>` 의 호출로 컴파일 파일의 집합
 
+### 기본 접근 지시어
 
+- Java 의 기본 접근 지시어는 default
+- Kotlin 의 기본 접근 지시어는 public
 
+## 2. 코틀린 파일의 접근 제어
 
+> [!important]
+> 코틀린은 `.kt` 파일에 변수, 함수, 클래스 여러개를 바로 만들 수 있다.
 
+- 그럼 이 파일에 접근 제어 지시어를 붙이면 어떻게 될까?
 
+- public
+	- 기본값
+	- 어디서든 접근할 수 있다.
+- protected
+	- 파일(최상단)에는 사용 불가능
+- internal
+	- 같은 모듈에서만 접근 가능
+- private
+	- 같은 파일 내에서만 접근 가능
 
+## 3. 다양한 구성요소의 접근 제어
 
+### 클래스 접근 제어
+
+- public
+	- 모든 곳에서 접근 가능
+- protected
+	- 선언된 클래스 또는 하위 클래스에서만 접근 가능
+- internal
+	- 같은 모듈에서만 접근 가능
+- private
+	- 선언된 클래스 내에서만 접근 가능
+
+### 생성자 접근 제어
+
+- 생성자 접근 제어도 클래스와 같다
+- 다만 생성자에 접근 지시어를 붙이려면, constructor 를 써주어야 한다.
+
+```kotlin
+class Cat private constructor (
+)
+```
+
+### 유틸 코드 만들기
+
+- Java 에서 유틸성 코드를 만들 때 abstrct class + privae constructor 를 사용해서 인스턴스화를 막았다.
+- Kotlin 에서도 비슷하게 가능하지만, 파일 최상단에 바로 유틸 함수를 작성하면 유틸 코드를 더 편하게 만들 수 있다.
+
+```kotlin
+// StringUtils.kt
+fun isDirectoryPath(path: String): Boolean {
+	return path.endsWith("/")
+}
+```
+
+- 위 파일을 바이트코드로 바꾸면 아래와 같이 클래스로 변한다.
+- 그래서 실제로 위 함수를 사용할 때 `StringUtils.isDirectoryPath("str")` 와 같이 정적 메소드처럼 사용할 수 있다.
+
+```java
+public final class StringUtilsKt {  
+   public static final boolean isDirectoryPath(@NotNull String path) {  
+      Intrinsics.checkNotNullParameter(path, "path");  
+      return StringsKt.endsWith$default(path, "/", false, 2, (Object)null);  
+   }
+```
+
+### 프로퍼티 접근 제어
+
+- 프로퍼티도 가시성 범위는 동일하다.
+- 다만, 프로퍼티의 가시성을 제어하는 방법으로는 두가지가 있다.
+
+1. val, var 앞에 접근 지시어를 붙여서 getter, setter 에 대한 가시성을 제어를 하는 방법
+2. get 또는 set 을 적어두고 그 앞에 접근 지시어를 붙여서 가시성을 제어하는 방법
+
+```kotlin
+class Car(
+	internal val name: String, // 1번 방법
+	_price: Int
+) {
+	var price = _price
+		private set // 2번 방법
+}
+```
+
+## 4. Java 와 Kotlin 을 함께 사용할 경우 주의할 점
+
+> [!important]
+> Internal 은 바이트 코드 상 public 이 된다.
+> 때문에 Java 코드에서는 Kotlin 모듈의 inernal 코드를 가져올 수 있다.
+
+- 만약상위 모듈이 Java 로 이루어졌고, 하위 모듈이 Kotlin 으로 이루어졌다면, 
+- 이 하위 모듈에 있는 internal 이라고 감싸진 field 나 함수 등을 상위 모듈의 Java 에서는 바로 가져올 수 있는 것이다.
+
+> [!important]
+> Kotlin 의 protected 와 Java 의 protected 는 다르다.
+> Java 는 같은 패키지의 Kotlin protected 멤버에 접근할 수 있다.
 
 # 12강. 코틀린에서 object 키워드를 다루는 방법
+
 
 
 
