update: 섹션 3. 코틀린에서의 OOP - 12강. 코틀린에서 object 키워드를 다루는 방법

--- a/01. Development/02. Lecture/자바 개발자를 위한 코틀린 입문/섹션 3. 코틀린에서의 OOP.md
+++ b/01. Development/02. Lecture/자바 개발자를 위한 코틀린 입문/섹션 3. 코틀린에서의 OOP.md
@@ -646,12 +646,176 @@ class Car(
 
 # 12강. 코틀린에서 object 키워드를 다루는 방법
 
+## 1. static 함수와 변수
+
+### Java 코드
+
+```kotlin
+public class JavaPerson {  
+  
+    private static final int MIN_AGE = 1;  
+    
+    public static JavaPerson newBaby(String name) {  
+        return new JavaPerson(name, MIN_AGE);  
+    }  
+  
+    private final String name;  
+  
+    private final int age;  
+  
+    private JavaPerson(String name, int age) {  
+        this.name = name;  
+        this.age = age;  
+    }  
+  
+}
+```
+
+### Kotlin 코드
+
+> [!important]
+> Kotlin 에는 static 이 없다.
+> companion object 지시어가 static 을 대신한다.
+> 사용법은 똑같다.
+
+> [!summary]
+> - static
+> 	- 클래스가 인스턴스화 될 때 새로운 값이 복제되는게 아니라 정적으로 인스턴스끼리의 값을 공유
+> - companion object
+> 	- 클래스와 동행하는 유일한 오브젝트
+> 	- companion object 도 하나의 객체로 간주되기 때문에, 이름을 붙일 수도 있고, interface 를 구현할 수도 있다.
+> 	- 이름을 붙이지 않는다면 Companion 이란 이름이 붙여진다.
+> 	- companion object 에 유틸성 함수를 넣어도 되지만, 최상단 파일을 활용하는 것이 좋다.
+
+> [!note]
+> 그냥 val 만 쓰면 런타임에 값이 할당되고
+> const val 을 쓰면 컴파일타임에 값이 할당된다.
+	그래서 const 는 진짜 상수에 붙이기 위한 용도이다.
+	기본 타입과 String 에 붙일 수 있다.
+
+```kotlin
+class Person private constructor(  
+    var name: String,  
+    var age: Int,  
+){  
+  
+    companion object {  
+        private const val MIN_AGE = 1  
+        fun newBaby(name: String): Person {  
+            return Person(name, MIN_AGE)  
+        }  
+    }  
+}
+```
+
+#### companion 사용하기
+
+- companion 안에 있는 메서드를 외부에서 쓰려면 어떻게하면 될까?
+
+```kotlin
+class Person private constructor(  
+    var name: String,  
+    var age: Int,  
+){  
+  
+    companion object {  
+        private const val MIN_AGE = 1  
+        fun newBaby(name: String): Person {  
+            return Person(name, MIN_AGE)  
+        }  
+    }  
+}
+```
 
 
+- companion object 에 이름을 붙이지 않으면 자동으로 이름이 Companion 이라고 붙여진다.
+- 따라서 아래와 같이 호출할 수 있다.
+- 물론 따로 이름을 붙이면 Companion 대신 그 이름을 쓰면 된다.
 
+```kotlin
+Person.Companion.newBaby("ABC")
+```
 
+- `@JvmStatic` 을 메서드에 붙이면 Companion 을 쓰지 않아도 된다.
+
+```kotlin
+Person.newBaby("ABC")
+```
+
+> [!important]
+> Java 에서 Kotlin compaion object 를 사용하려면 `@JvmStatic` 을 붙여야 한다.
+
+## 2. 싱글톤
+
+> [!info] 싱글톤이란
+> 단 하나의 인스턴스만을 갖는 클래스
+
+### Java 코드
+
+- 아래에 synchronized, enum 등을 사용하는 방법이 있다.
+
+```java
+public class JavaSingleton {  
+  
+    private static final JavaSingleton INSTANCE = new JavaSingleton();  
+  
+    private JavaSingleton() {  
+    }  
+  
+    public static JavaSingleton getInstance() {  
+        return INSTANCE;  
+    }  
+  
+}
+```
+
+### Kotlin 코드
+
+- 아래와 같이 object 를 앞에 붙여주면 싱글톤 클래스 완성이다.
+
+```kotlin
+object Singleton
+```
+
+- 아래와 같이 사용한다.
+
+```kotlin
+fun main() {  
+    println(Singleton.a)  
+    Singleton.a += 10  
+    println(Singleton.a)  
+}
+```
+
+## 3. 익명 클래스
+
+> [!info] 익명 클래스란
+> 특정 인터페이스나 클래스를 상속받은 구현체를 일회성으로 사용할 때 쓰는 클래스
+
+- Java 에서는 `new 타입이름()`
+- Kotlin 에서는 `object : 타입이름`
+
+```kotlin
+fun main() {  
+    moveSomething(object : Movable {  
+        override fun move() {  
+            println("무브 무브")  
+        }  
+  
+        override fun fly() {  
+            println("날다 날다")  
+        }  
+    })  
+}  
+  
+private fun moveSomething(movable: Movable) {  
+    movable.move()  
+    movable.fly()  
+}
+```
 
 # 13강. 코틀린에서 중첩 클래스를 다루는 방법
+
 
 
 
