update: 섹션 3. 코틀린에서의 OOP - 13강. 코틀린에서 중첩 클래스를 다루는 방법

--- a/01. Development/02. Lecture/자바 개발자를 위한 코틀린 입문/섹션 3. 코틀린에서의 OOP.md
+++ b/01. Development/02. Lecture/자바 개발자를 위한 코틀린 입문/섹션 3. 코틀린에서의 OOP.md
@@ -816,12 +816,89 @@ private fun moveSomething(movable: Movable) {
 
 # 13강. 코틀린에서 중첩 클래스를 다루는 방법
 
+## 1. 중첩 클래스의 종류
 
+어딘가에 소속되어 있는 클래스는 여러 종류가 있었다.
 
+### 중첩 클래스의 종류
 
+- <u>Static 을 사용하는 중첩 클래스</u>
+- Static 을 사용하지 않는 중첩 클래스
+	- <u>내부 클래스 (Inner Class)</u>
+	- 지역 클래스 (Local Class)
+	- 익명 클래스 (Anonymous Class)
 
+- 보통 중첩 클래스라고 하면 "Static 을 사용하는 중첩 클래스"와 "내부 클래스"를 말한다.
+
+### 중첩 클래스 설명
+
+#### static 을 사용하는 중첩 클래스
+
+- 클래스 안에 static 을 붙인 클래스
+- 밖의 클래스 직접 참조 불가
+
+#### 내부 클래스 (Inner Class)
+
+- 클래스 안의 클래스
+- 밖의 클래스 직접 참조 가능
+
+> [!important]
+> 1. 내부 클래스는 숨겨진 외부 클래스 정보를 가지고 있어, 참조를 해지하지 못하는 경우 메모리 누수가 생길 수 있고, 이를 디버깅 하기 어렵다.
+> 2. 내부 클래스의 직렬화 형태가 명확하게 정의되지 않아 직렬화에 있어 제한이 있다.
+
+> [!note]
+> 클래스 안에 클래스를 만들 때는 static 클래스를 사용하라
+
+## 2. 코틀린의 중첩 클래스와 내부 클래스
+
+### Kotlin 에서 Static 을 사용하는 중첩 클래스 만들기
+
+- Kotlin 에서는 기본적으로 바깥 클래스에 대한 연결이 없는 중첩 클래스가 만들어진다.
+- 다만 Kotlin 에는 static 이 없기 때문에 그냥 클래스를 쓰면 된다.
+
+```kotlin
+class JavaHouse(  
+    val address: String,  
+    val livingRoom: LivingRoom  
+) {  
+    inner class LivingRoom(  
+        private val area: Double  
+    )  
+}
+```
+
+### Kotlin 에서 내부 클래스 만들기
+
+- inner 키워드를 쓰면 된다.
+- 만약 내부 클래스에서 외부 클래스를 참조하고 싶다면 `this@외부클래스.필드` 를 쓰면 된다.
+
+```kotlin
+class House(  
+    val address: String,  
+    val livingRoom: LivingRoom  
+) {  
+    inner class LivingRoom(  
+        private val area: Double  
+    ) {  
+        val address: String  
+            get() = this@House.address  
+    }  
+}
+```
+
+### 정리
+
+- Java
+	- 클래스 안의 static 클래스 : 외부 클래스 참조 없음, 권장되는 유형
+	- 클래스 안의 클래스 : 외부 클래스 참조 있음
+- Kotlin
+	- 클래스 안의 클래스 : 외부 클래스 참조 없음, 권장되는 유형
+	- 클래스 안의 inner 클래스 : 외부 클래스 참조 있음
 
 # 14강. 코틀린에서 다양한 클래스를 다루는 방법
+
+
+
 
 
 
