update: 섹션 3. 코틀린에서의 OOP - 14강. 코틀린에서 다양한 클래스를 다루는 방법

--- a/01. Development/02. Lecture/자바 개발자를 위한 코틀린 입문/섹션 3. 코틀린에서의 OOP.md
+++ b/01. Development/02. Lecture/자바 개발자를 위한 코틀린 입문/섹션 3. 코틀린에서의 OOP.md
@@ -897,10 +897,127 @@ class House(
 
 # 14강. 코틀린에서 다양한 클래스를 다루는 방법
 
+## 1. Data Class
+
+### Java DTO 클래스의 단점
+
+- 자바에는 계층간의 데이터를 전달하기 위한 DTO(Data Transfer Object) 가 있다.
+- 이 DTO 는 보통 다음과 같은 구성으로 이루어져 있다.
+	- 데이터(필드)
+	- 생성자와 getter
+	- equals, hashCode
+	- toString
+- 위 구성을 만들기 위해 IDE 를 활용할 수도 있고, lombok 을 활용할 수도 있다.
+- 하지만 결국 클래스가 장황해지거나, 클래스 생성 이후 추가적인 처리를 해줘야 하는 단점이 있다.
+
+### Kotlin 의 Data Class
+
+- 클래스를 만들고 앞에 `data` 키워드를 붙여주면 Data Class 를 만들 수 있다.
+- Data Class 에서는 `equals`, `hashCode`, `toString` 을 자동으로 만들어준다.
+- 여기에 named argument 까지 활용하면 builder pattern 을 쓰는 것 같은 효과도 있다.
+
+```kotlin
+data class PersonDto(  
+    val name: String,  
+    val age: Int,  
+)
+```
+
+- Java 에서는 JDK16 부터 Kotlin 의 data class 같은 record class 를 도입하였다.
+
+## 2. Enum Class
+
+- Enum 클래스는 추가적인 클래스를 상혹받을 수 없다.
+- 인터페이스는 구현할 수 있으며, 각 코드가 싱글톤이다.
+
+### Java 코드
+
+- Java 에서는 static 메서드에서 if-else 문을 쓰게 된다면 Enum 타입이 많아질 수록 코드의 양도 같이 늘어난다.
+- else 로직 처리에 대한 애매함도 있다.
+	- 정해진 타입에 대한 비교인데 else 를 어떻게 처리해야하나
+
+```java
+public enum JavaCountry {  
+  
+    KOREA("KO"),  
+    AMERICA("US"),  
+    ;  
+  
+    private final String code;  
+  
+    JavaCountry(String code) {  
+        this.code = code;  
+    }  
+  
+    public String getCode() {  
+        return code;  
+    }  
+  
+    private static void handleCountry(JavaCountry country) {  
+        if (country == JavaCountry.KOREA) {  
+            // 로직 처리  
+        }  
+        if (country == JavaCountry.AMERICA) {  
+            // 로직 처리  
+        }
+    }  
+}
+```
+
+### Kotlin 코드
+
+- Kotlin 의 Enum Class 에서는 `when` 에서 Enum 을 소괄호로 값을 받을 때는 `country` 값이 어떤 것이 있는지 다 알고 있기 때문에 else 문이 필요 없다.
+- Enum 클래스는 컴파일 타임에 어떤 코드가 있는지 다 알고 있기 때문에 가능한 것이다.
+
+```kotlin
+enum class Country(  
+    private val code:String,  
+) {  
+    KOREA("KO"),  
+    AMERICA("US")  
+    ;  
+}  
+  
+fun handleCountry(country: Country) {  
+    when (country) {  
+        Country.KOREA -> TODO()  
+        Country.AMERICA -> TODO()  
+    }  
+}
+```
+
+## 3. Sealed Class, Sealed Interface
+
+- 상속이 가능하도록 추상클래스를 만들어야 하는데, 외부에서는 이 클래스를 상속받지 못하게 하고 싶을때 사용한다.
+- 그래서 추상화가 필요한 Entity 또는 DTO 에 sealed class 를 활용한다.
 
 
+- 컴파일 타임 때 하위 클래스의 타입을 모두 기억한다.
+- 즉, 런타임때 클래스 타입이 추가될 수 없다.
 
+- 하위 클래스는 같은 패키지에 있어야 한다.
 
+- Enum 과 다른 점
+	- 클래스를 상속받을 수 있다.
+	- 하위 클래스는 멀티 인스턴스가 가능하다.
 
+- JDK17 에서도 Sealed Class 가 추가되었다.
 
-
+```kotlin
+sealed class HyundaiCar(  
+    val name: String,  
+    val price: Long  
+)  
+  
+class Avante : HyundaiCar("abc", 100)  
+class Sonata : HyundaiCar("abc", 100)  
+class Grandeur : HyundaiCar("abc", 100)  
+  
+fun handleCar(car: HyundaiCar) {  
+    when (car) {  
+        is Avante -> TODO()  
+        is Grandeur -> TODO()  
+        is Sonata -> TODO()  
+    }  
+}
+```
