update: 09장. UDP 프로그래밍 - 01. UDP 를 이용한 프로그래밍 방법

--- a/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/09장. UDP 프로그래밍.md
+++ b/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/09장. UDP 프로그래밍.md
@@ -8,8 +8,24 @@ tags:
 ---
 # 01. UDP 를 이용한 프로그래밍 방법
 
+## UDP 특징
+
 - UDP 는 데이터그램 통신 프로토콜
-- 비연결성 프로토콜이다.
+- 미리 연결을 맺고 통신하는 방식이 아닌, 비연결성 프로토콜이다.
+
+- UDP 는 패킷을 보낼 때마다 수신 측의 주소와 로컬 파일 설명자를 함께 전송해야 한다.
+- 이런 이유로 UDP 는 전송해야 할 데이터 외에 추가적인 데이터가 함께 전송되어야 한다.
+
+- TCP 는 한번 연결을 맺으면 연속적으로 데이터를 주고받을 수 있기 때문에 연결이 끊어지지 않는 한 대용량 데이터도 주고받을 수 있다.
+- 하지만 UDP 의 경우에는 데이터의 크기가 64KB 로 제한되어 있다는 단점이 있다.
+
+- UDP 프로그래밍을 위해서는 클라이언트와 서버 모두 java.net 패키지 안에 있는 DatagramSocket 객체를 생성해야 한다.
+- 또한 클라이언트와 서버는 데이터를 주고받기 위해서 DatagramPacket 객체를 이용해야 한다.
+
+## 클라이언트 서버 동작 순서
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 그림 9-1.png]]
+
 
 
 
