update: 09장. UDP 프로그래밍 - 02. UDP 를 이용한 에코 클라이언트/서버 프로그래밍

--- a/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/09장. UDP 프로그래밍.md
+++ b/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/09장. UDP 프로그래밍.md
@@ -26,7 +26,102 @@ tags:
 
 ![[자바 IO & NIO 네트워크 프로그래밍 - 그림 9-1.png]]
 
+# 02. UDP 를 이용한 에코 클라이언트/서버 프로그래밍
 
+## 1. 에코 서버 프로그래밍
 
+```java
+public class UDPEchoServer {  
+    public static void main(String[] args) {  
+        int port = 3000;  
+        System.out.println("접속 대기상태입니다.");  
+        try (DatagramSocket dsock = new DatagramSocket(port)) {  
+            while (true) {  
+                byte[] buffer = new byte[1024];  
+                DatagramPacket receivePacket = new DatagramPacket(buffer, buffer.length);  
+                dsock.receive(receivePacket);  
+  
+                String msg = new String(receivePacket.getData(), 0, receivePacket.getLength());  
+                System.out.println("전송 받은 문자열 : " + msg);  
+                if (msg.equals("quit")) {  
+                    break;  
+                }  
+  
+                DatagramPacket sendPacket = new DatagramPacket(  
+                        receivePacket.getData(),  
+                        receivePacket.getData().length,  
+                        receivePacket.getAddress(),  
+                        receivePacket.getPort());  
+                dsock.send(sendPacket);  
+            }  
+            System.out.println("UDPEchoServer 를 종료합니다.");  
+  
+        } catch (IOException e) {  
+            System.out.println(e);  
+        }  
+    }  
+}
+```
 
+## 2. 에코 클라이언트 프로그래밍
 
+```java
+import java.io.BufferedReader;  
+import java.io.InputStreamReader;  
+import java.net.DatagramPacket;  
+import java.net.DatagramSocket;  
+import java.net.InetAddress;  
+import java.net.UnknownHostException;  
+  
+public class UDPEchoClient {  
+    public static void main(String[] args) {  
+        String ip = "127.0.0.1";  
+        int port = 3000;  
+  
+        InetAddress inetaddr;  
+        try {  
+            inetaddr = InetAddress.getByName(ip);  
+        } catch (UnknownHostException e) {  
+            e.printStackTrace();  
+            return;  
+        }  
+  
+        try (DatagramSocket dsock = new DatagramSocket();  
+             BufferedReader br = new BufferedReader(new InputStreamReader(System.in))) {  
+  
+            String line;  
+            while ((line = br.readLine()) != null) {  
+                // 전송  
+                DatagramPacket sendPacket = new DatagramPacket(line.getBytes(), line.getBytes().length, inetaddr, port);  
+                dsock.send(sendPacket);  
+  
+                if (line.equals("quit")) {  
+                    break;  
+                }  
+  
+                // 받기  
+                byte[] buffer = new byte[line.getBytes().length];  
+                DatagramPacket receivePacket = new DatagramPacket(buffer, buffer.length);  
+                dsock.receive(receivePacket);  
+  
+                // 받은 결과를 출력한다.  
+                String msg = new String(receivePacket.getData(), 0, receivePacket.getData().length);  
+                System.out.println("전송받은 문자열 : " + msg);  
+            }  
+            System.out.println("UDPEchoClient 를 종료합니다.");  
+  
+        } catch (Exception e) {  
+            e.printStackTrace();  
+        }  
+    }  
+}
+```
+
+## 3. 에코 클라이언트와 서버의 실행
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 그림 9-2.png|400]]
+![[자바 IO & NIO 네트워크 프로그래밍 - 그림 9-3.png|400]]
+
+# 03. UDP 를 이용한 타임 서버와 클라이언트 작성
+
+생략
