update: 섹션 4. 코틀린에서의 FP - 15강. 코틀린에서 배열과 컬렉션을 다루는 방법

--- a/01. Development/02. Lecture/자바 개발자를 위한 코틀린 입문/섹션 4. 코틀린에서의 FP.md
+++ b/01. Development/02. Lecture/자바 개발자를 위한 코틀린 입문/섹션 4. 코틀린에서의 FP.md
@@ -9,7 +9,38 @@ tags:
 ---
 # 15강. 코틀린에서 배열과 컬렉션을 다루는 방법
 
+## 1. 배열
 
+- 별로 쓰지 않지만 문법을 알고있자.
+
+```java
+int[] array = {100, 200};
+
+for (int i = 0; i < array.length; i++) {
+	System.out.println("%s %s", i, array[i]);
+}
+```
+
+```kotlin
+fun main() {  
+    val array = arrayOf(100, 200)  
+  
+    for (i in array.indices) {  
+        println("${i} ${array[i]}")  
+    }
+    for ((idx, value) in array.withIndex()) {  
+        println("$idx $value")  
+    }
+}
+```
+
+## 2. 코틀린에서의 Collection - List, Set, Map
+
+
+
+
+
+## 3. 컬렉션의 null 가능성, Java 와 함께 사용하기
 
 
 
