update: 섹션 4. 코틀린에서의 FP - 15강. 코틀린에서 배열과 컬렉션을 다루는 방법

--- a/01. Development/02. Lecture/자바 개발자를 위한 코틀린 입문/섹션 4. 코틀린에서의 FP.md
+++ b/01. Development/02. Lecture/자바 개발자를 위한 코틀린 입문/섹션 4. 코틀린에서의 FP.md
@@ -36,9 +36,102 @@ fun main() {
 
 ## 2. 코틀린에서의 Collection - List, Set, Map
 
+- 컬렉션을 만들어줄 때 불변인지, 가변인지를 설정해야 한다.
+- Kotlin 에서의 컬렉션 계층 구조를 보면 Java 와 다르게 Mutable 인터페이스가 있다.
 
+![[자바 개발자를 위한 코틀린 입문 - Collection 계층구조.png|600]]
 
+- 가변 (Mutable) 컬렉션
+	- 컬렉션에 element 를 추가, 삭제할 수 있다.
+- 불변 컬렉션
+	- 컬렉션에 element 를 추가, 삭제할 수 없다.
 
+- 불변 컬렉션이라 하더라도 Reference Type 인 Element 의 필드는 바꿀 수 있다.
+
+### List
+
+```java
+final List<Integer> numbers = Arrays.asList(100, 200);
+
+System.out.println(numbers.get(0));
+for (int number : numbers) {
+	System.out.prntln(number);
+}
+for (int i = 0; i < numbers.size9); i++) {
+	System.out.println(numbers.get(i));
+}
+```
+
+```kotlin
+val numbers = listOf(100, 200)   // 불변 리스트
+val emptyList = emptyList<Int>() // numbers 와 달리 타입을 추론할 수 없기 때문에 적어줘야 한다.
+
+println(numbers[0])
+for (number in numbers) {
+	println(number)
+}
+for ((idx, value) in numbers.withIndex()) {
+	println(value)
+}
+
+val mutableNumbers = mutableListOf(100, 200) // 가변 리스트 (기본 구현체는 ArrayList, 기타 사용법은 Java 와 동일)
+mutableNumbers.add(400)
+```
+
+> [!tip]
+> 우선 불변 리스트를 만들고, 꼭 필요한 경우 가변 리스트로 바꾸자!
+
+### Set
+
+집합은 List 와 다르게 순서가 없고, 같은 element 는 하나만 존재할 수 있다.
+
+```kotlin
+val numbers = setOf(100, 200) // 불변
+for (number in numbers) {  
+    println(number)  
+}  
+for ((index, number) in numbers.withIndex()) {  
+    println(number)  
+}
+
+val mutableNumbers = mutableSetOf(100, 200) // 가변 Set (기본 구현체는 LinkedHashSet)
+```
+
+### Map
+
+```java
+Map<Integer, String> oldMap = new HashMap<>();
+oldMap.put(1, "MONDAY");
+oldMap.put(2, "TUESDAY");
+
+Map.of(1, "MONDAY", 2, "TUESDAY");
+
+for (int key : map.keySet()) {
+	System.out.println(key);
+	System.out.println(map.get(key));
+}
+for (Map.Entry<Integer, String> entry : map.entrySet()) {
+	System.out.println(entry.getKey());
+	System.out.println(entry.getValue());
+}
+```
+
+```kotlin
+val oldMap = mutableMapOf<Int, String>() // 가변
+oldMap.put(1, "MONDAY")  
+oldMap[2] = "TUESDAY"  
+  
+val newMap = mapOf(1 to "MONDAY", 2 to "TUESDAY") // 불변
+
+for (key in oldMap.keys) {  
+    println(key)  
+    println(oldMap[key])  
+}  
+for ((key, value) in oldMap.entries) {  
+    println(key)  
+    println(value)  
+}
+```
 
 ## 3. 컬렉션의 null 가능성, Java 와 함께 사용하기
 
