update: 섹션 4. 코틀린에서의 FP - 15강. 코틀린에서 배열과 컬렉션을 다루는 방법

--- a/01. Development/02. Lecture/자바 개발자를 위한 코틀린 입문/섹션 4. 코틀린에서의 FP.md
+++ b/01. Development/02. Lecture/자바 개발자를 위한 코틀린 입문/섹션 4. 코틀린에서의 FP.md
@@ -135,12 +135,24 @@ for ((key, value) in oldMap.entries) {
 
 ## 3. 컬렉션의 null 가능성, Java 와 함께 사용하기
 
+- ? 위치에 따라 null 가능성 의미가 달라지므로 차이를 잘 이해해야 한다.
 
+```kotlin
+List<Int?>  : 리스트에 null 이 들어갈 수 있지만, 리스트는 절대 null 이 아님
+List<Int>?  : 리스트에 null 이 들어갈 수 없지만, 리스트는 null 일 수 있음
+List<Int?>? : 리스트에 null 이 들어갈 수도 있고, 리스트가 null 일 수도 있음
+```
 
+- Java 는 읽기 전용 컬렉션과 변경 가능 컬렉션을 구분하지 않는다.
+	- 그래서 Kotlin 의 읽기 전용 컬렉션에 Java 가 값을 추가한 후, 다시 Kotlin 에 돌려주면 Kotlin 입장에서는 이건 읽기 전용 컬렉션이기 때문에 오류가 난다.
+- Java 는 nullable 타입과 non-nullable 타입을 구분하지 않는다.
+	- 그래서 Kotlin 의 null 이 들어갈 수 없는 컬렉션에 Java 가 값을 추가한 후, 다시 Kotlin 에 돌려주면 Kotlin 입장에서는 이건 읽기 전용 컬렉션이기 때문에 오류가 난다.
+- 그렇기 때문에 Kotlin 쪽의 컬렉션이 Java 에서 호출되면 컬렉션 내용이 변할 수 있음을 감안해야 한다.
+- Kotlin 쪽에서 `Collections.unmodifableXXX()`를 활용하면 변경 자체는 막을 수는 있다.
 
-
-
-
+- Kotlin 에서 Java 컬렉션을 가져다 사용할 때 플랫폼 타입을 주의해야 한다.
+	- Java 에서 `List<Integer>` 를 Kotlin 에게 보내면 Kotlin 입장에서는 `List<Int?>`, `List<Int>?`, `List<Int?>?` 중 어떤것인지 알 수가 없다.
+- 이럴때는 Java 코드를 보며, 맥락을 확인하고 java 코드를 가져오는 지점을 wrapping 하며 영향 범위를 최소화하는 것이 좋다.
 
 # 16강. 코틀린에서 다양한 함수를 다루는 방법
 
