update: 섹션 4. 코틀린에서의 FP

--- a/01. Development/02. Lecture/자바 개발자를 위한 코틀린 입문/섹션 4. 코틀린에서의 FP.md
+++ b/01. Development/02. Lecture/자바 개발자를 위한 코틀린 입문/섹션 4. 코틀린에서의 FP.md
@@ -227,8 +227,33 @@ val String.lastChar: Char         // 프로퍼티
 
 ## 2. infix 함수
 
+- 중위함수(infix) 는 함수를 호출하는 새로운 방법이다.
+	- downTo, step 도 함수이다 (중위 호출 함수)
+- 기존에 함수를 호출할 때는 `변수.함수이름(arguemnt)` 방식을 썼었다.
+- 새로 생긴 방식은 변수와 argument 가 각각 하나씩만 있는 경우에 `변수 함수이름 argument` 방식으로 호출하는 것이다.
+- `infix` 가 함수 앞에 붙으면 중위함수 호출을 할 수 있다.
+- 확장함수뿐만 아니라 멤버함수에도 붙일 수 있다.
+
+```kotlin
+fun Int.add(other: Int): Int {
+	return this + other
+}
+
+3.add(4)
+```
+
+```kotlin
+infix fun Int.add2(other: Int): Int {
+	return this + other
+}
+
+3.add2(4)
+3 add2 4
+```
 
 ## 3. inline 함수
+
+
 
 
 
