--- a/01. Development/02. Lecture/자바 개발자를 위한 코틀린 입문/섹션 4. 코틀린에서의 FP.md
+++ b/01. Development/02. Lecture/자바 개발자를 위한 코틀린 입문/섹션 4. 코틀린에서의 FP.md
@@ -253,11 +253,34 @@ infix fun Int.add2(other: Int): Int {
 
 ## 3. inline 함수
 
+- 함수가 호출되는 대신, 함수를 호출한 지점에 함수 본문을 그대로 복붙하고 싶은 경우 사용한다.
+- 함수를 파라미터로 전달할 때 오버헤드를 줄일 수 있다.
+	- 함수를 계속 중첩해서 쓰는 경우에 이 함수가 다시 또 다른 함수를 부르고, 또 다른 함수를 부르면 그 함수의 call chain 에 overhead 가 생긴다.
+	- 이것을 줄이기 위해 inline 을 쓰는 것이다.
+- 하지만 inline 함수의 사용은 성능 측정과 함께 신중하게 사용되어야 한다.
+- Kotlin 라이브러리에서는 최적화를 어느 정도 해뒀기 때문에 적절하게 inline 함수가 붙어 있다.
 
-
-
+```kotlin
+fun main() {  
+    3.add(4) // 이 부분이
+}  
+  
+inline fun Int.add(other: Int): Int {  
+    return this + other  
+}
+```
+ 
+```java
+public static final void main() {  
+   byte $this$add$iv = 3;  
+   int other$iv = 4;  
+   int $i$f$add = false;  
+   int var10000 = $this$add$iv + other$iv; // 이렇게 바뀌었다.
+}
+```
 
 ## 4. 지역함수
+
 
 
 
