--- a/01. Development/02. Lecture/자바 개발자를 위한 코틀린 입문/섹션 4. 코틀린에서의 FP.md
+++ b/01. Development/02. Lecture/자바 개발자를 위한 코틀린 입문/섹션 4. 코틀린에서의 FP.md
@@ -281,13 +281,184 @@ public static final void main() {
 
 ## 4. 지역함수
 
+- 함수 안에 함수를 선언할 수 있는 것을 지역함수라 부른다.
+- 함수로 추출하면 좋을 것 같은데, 이 함수를 지금 함수 내에서만 사용하고 싶을 때 사용한다.
+- depth 가 깊어지기도 하고, 코드가 그렇게 깔끔하지 않다.
 
+```kotlin
+fun createPerson(firstName: String, lastName: String): Person {  
+    if (firstName.isEmpty()) {  
+        throw IllegalArgumentException("firstName 은 비어있을 수 없습니다! 현재 값 : $firstName") // 중복
+    }  
+    if (lastName.isEmpty()) {  
+        throw IllegalArgumentException("lastName 은 비어있을 수 없습니다! 현재 값 : $lastName") // 중복
+    }  
+    return Person(firstName, lastName, 1)  
+}
+```
 
-
-
-
+```kotlin
+fun createPerson(firstName: String, lastName: String): Person {  
+    fun validateName(name: String, fieldName: String) {  
+        if (name.isEmpty()) {  
+            throw IllegalArgumentException("${fieldName} 은 비어있을 수 없습니다! 현재 값 : $name")  
+        }  
+    }  
+    validateName(firstName, "firstName")  
+    validateName(lastName, "lastName")  
+      
+    return Person(firstName, lastName, 1)  
+}
+```
 
 # 17강. 코틀린에서 람다를 다루는 방법
+
+## 1. Java 에서 람다를 다루기 위한 노력
+
+- 자바에서는 "메소드 자체를 직접 넘겨주는 것처럼" 람다를 쓸 수 있다.
+- 실제 함수를 넘기는 것처럼 보여주지만 실제 받는 것은 인터페이스, 즉, 미리 만들어뒀던 Predicate 인터페이스이기 때문이다.
+- 이를 바꿔말하면, Java 에서 함수는 변수에 할당되거나 파라미터로 전달할 수 없다. (2급시민)
+
+## 2. 코틀린에서의 람다
+
+- Java 와는 근본적으로 다른 한 가지가 있다.
+
+> [!note]
+> - Kotlin 에서는 함수가 그 자체로 값이 될 수 있다.
+> - 변수에 할당할 수도, 파라미터로 넘길 수도 있다.
+> - 즉, Kotlin 에서 함수는 1급 시민이다.
+
+```kotlin
+val fruits = listOf(  
+    Fruit("사과", 1_000),  
+    Fruit("사과", 1_200),  
+    Fruit("사과", 1_300),  
+    Fruit("사과", 1_400),  
+    Fruit("바나나", 3_000),  
+    Fruit("바나나", 3_200),  
+    Fruit("바나나", 2_500),  
+    Fruit("수박", 1_0000),  
+)  
+  
+// 람다를 만드는 방법 1
+val isApple = fun(fruit: Fruit): Boolean { // 함수 이름 X
+    return fruit.name == "사과"  
+}  
+  
+// 람다를 만드는 방법 2
+val isApple2 = { fruit: Fruit -> fruit.name == "사과" } // 중괄호, 화살표
+  
+// 람다를 직접 호출하는 방법 1
+isApple(fruits[0])  
+  
+// 람다를 직접 호출하는 방법 2
+isApple.invoke(fruits[0])
+```
+
+- 람다 함수에도 타입이 있다.
+- 람다 함수의 타입은 `(파라미터 타입...) -> 반환 타입` 형태로 쓴다.
+
+```kotlin
+val isApple: (Fruit) -> Boolean = fun(fruit: Fruit): Boolean {
+    return fruit.name == "사과"  
+}  
+  
+// 람다를 만드는 방법 2
+val isApple2: (Fruit) -> Boolean = { fruit: Fruit -> fruit.name == "사과" }
+```
+
+### 예제코드
+
+#### Java 코드
+
+```java
+private List<Fruit> filterFruits(List<Fruit> fruits, 
+								 Predicate<Fruit> fruitFilter) {
+	List<Fruit> results = new ArrayList<>();
+	for (Fruit fruit : fruits) {
+		if (fruitFilter.test(fruit)) {
+			results.add(fruit);
+		}
+	}
+	return results;
+}
+```
+
+#### Kotlin 코드
+
+```kotlin
+private fun filterFruits(fruits: List<Fruit>, 
+						 filter: (Fruit) -> Boolean // 인터페이스 없이 직접 함수를 넘길 수 있다.
+): List<Fruit> {
+
+	val results = mutableListOf<Fruit>()
+	for (fruit in fruits) {
+		if (filter(fruit)) {
+			results.add(fruit)
+		}
+	}
+	return results
+}
+```
+
+- 위 함수는 아래와 같이 쓰일 수 있다.
+
+```kotlin
+val fruits = listOf(  
+    Fruit("사과", 1_000),  
+    Fruit("사과", 1_200),  
+    Fruit("사과", 1_300),  
+    Fruit("사과", 1_400),  
+    Fruit("바나나", 3_000),  
+    Fruit("바나나", 3_200),  
+    Fruit("바나나", 2_500),  
+    Fruit("수박", 1_0000),  
+)
+val isApple = { fruit: Fruit -> fruit.name == "사과" }
+
+// filterFruits 의 두번째 파라미터가 Fruit 를 인자로 받고 Boolean 을 반환하는 
+// 함수를 받는다고 명시하였기 떄문에 isApple 을 쓸 수 있다.
+filterFruits(fruits, isApple)
+
+// 물론 익명함수이기 때문에 아래와 같이 바로 넣어줄 수도 있다.
+filterFruits(fruits, fun(fruit: Fruit): Boolean {
+	return fruit.name == "사과"
+})
+
+// 만약 함수에서 받는 함수 파라미터가 마지막에 위치해 있으면 소괄호 밖으로 중괄호를 뺄 수 있다.
+// 그러면 중괄호가 함수를 호출할 때 가장 마지막 파라미터로 들어간다.
+filterFruits(fruits) { fruit: Fruit -> fruit.name == "사과" }
+
+// 파라미터 타입을 추론할 수 있기 때문에 명시하지 않아도 된다.
+filterFruits(fruits) { fruit -> fruit.name == "사과" }
+
+// 파라미터가 한개인 경우 it 을 사용하면 it 이 그 파라미터가 된다.
+filterFruits(fruits) { it.name == "사과" }
+
+// 람다는 여러줄 작성할 수 있고, 마지막 줄의 결과가 람다의 반환값이다.
+filterFruits(fruits) { fruit -> 
+	println("사과만 받는다..!!")
+	fruit.name == "사과"
+}
+```
+
+## 3. Closure
+
+
+
+
+
+
+
+
+
+
+
+## 4. 다시 try with resources
+
+
+
+
 
 
 
