--- a/01. Development/02. Lecture/자바 개발자를 위한 코틀린 입문/섹션 4. 코틀린에서의 FP.md
+++ b/01. Development/02. Lecture/자바 개발자를 위한 코틀린 입문/섹션 4. 코틀린에서의 FP.md
@@ -444,25 +444,56 @@ filterFruits(fruits) { fruit ->
 
 ## 3. Closure
 
+### Java 코드
 
+- 아래 코드를 입력하면 Java 에서는 `targetFruitName` 에서 오류가 난다.
+	- `Variable used in lambda expression should be final or effectively final`
+- Java 에서는 람다를 쓸 때 사용할 수 있는 변수에 제약이 있다.
+	- `final` 이거나 실질적으로 `final` 인 변수만 사용할 수 있다.
 
+```java
+String targetFruitName = "바나나";
+targetFruitName = "수박";
+filterFruits(fruits, (fruit) -> targetFruitName.equals(fruit.getName()));
+```
 
+### Kotlin 코드
 
+- 하지만 Kotlin 에서는 해당 코드가 문제없이 동작한다.
 
+```kotlin
+var targetFruitName = "바나나"
+targetFruitName = "수박"
+filterFruits(fruits) { it.name == targetFruitName }
+```
 
-
-
-
+> [!note]
+> - Kotlin 에서는 람다가 시작하는 지점에 참조하고 있는 변수들을 모두 포획하여 그 정보를 가지고 있다.
+> - 이렇게 해야만, 람다를 진정한 일급 시민으로 간주할 수 있다.
+> - 이 데이터 구조를 Closure 라고 부른다.
 
 ## 4. 다시 try with resources
 
+```java
+fun readFile(path: String) {
+	BufferedReader(FileReader(path)).use { reader -> 
+		println(reader.readLine())
+	}
+}
+```
 
+- 이제까지 배운 것을 토대로 [[섹션 2. 코틀린에서 코드를 제어하는 방법#7장. 코틀린에서 예외를 다루는 방법#3. try with resources|try with resources 의 use]] 가 어떻게 동작하는지 보자.
+- 위 코드에서 use 를 타고 들어가면 아래와 같이 Closeable 구현체에 대한 확장 함수가 보인다.
+	- `:Closeable` 은 `Closeable` 을 구현한, 상속받은 이라는 뜻이다.
+	- `T.use` 은 `Closeable` 을 구현한 타입 T 에 대한 확장함수라는 뜻이다.
+	- `inline` 함수이기도 하다.
+	- `block: (T) -> R` 은 `block` 이라는 이름을 가진 함수이다.
+		- `T` 타입을 받고 `R` 타입을 리턴하는 함수이다.
+		- 람다를 받도록 만들어진 함수
 
-
-
-
-
-
+```kotlin
+public inline fun <T : Closeable?, R> T.use(block: (T) -> R): R {...
+```
 
 # 18강. 코틀린에서 컬렉션을 함수형으로 다루는 방법
 
