--- a/01. Development/02. Lecture/자바 개발자를 위한 코틀린 입문/섹션 4. 코틀린에서의 FP.md
+++ b/01. Development/02. Lecture/자바 개발자를 위한 코틀린 입문/섹션 4. 코틀린에서의 FP.md
@@ -497,8 +497,162 @@ public inline fun <T : Closeable?, R> T.use(block: (T) -> R): R {...
 
 # 18강. 코틀린에서 컬렉션을 함수형으로 다루는 방법
 
+## 1. 필터와 맵
 
+```kotlin
+data class Fruit (  
+    val id: Long,  
+    val name: String,  
+    val factoryPrice: Long,  
+    val currentPrice: Long,  
+)  
+  
+val fruits = listOf(  
+    Fruit(1, "사과", 1_000L, 1_000L),  
+    Fruit(2, "사과", 1_200L, 1_200L),  
+    Fruit(3, "사과", 1_300L, 1_300L),  
+    Fruit(4, "사과", 1_400L, 1_400L),  
+    Fruit(5, "바나나", 3_000L, 3_000L),  
+    Fruit(6, "바나나", 3_200L, 3_200L),  
+    Fruit(7, "바나나", 2_500L, 2_500L),  
+    Fruit(8, "수박", 1_0000L, 1_0000L),  
+)
+```
 
+```kotlin
+// filter : 리스트를 필터링하여 가져온다.  
+val apples = fruits.filter { fruit -> fruit.name == "사과" }  
+  
+// filterIndexed : index 와 element 를 함께 가져오고 싶을때  
+val apples2 = fruits.filterIndexed { idx, fruit ->  
+    println(idx)  
+    fruit.name == "사과"  
+}  
+  
+// map : 사과의 가격들을 가져와라  
+val applePrices = fruits  
+    .filter { fruit -> fruit.name == "사과" }  
+    .map { fruit -> fruit.currentPrice }  
+  
+// mapIndexed : 인덱스도 필요할 때 사용  
+val applePrices2 = fruits  
+    .filter { fruit -> fruit.name == "사과" }  
+    .mapIndexed { idx, fruit ->  
+        println(idx)  
+        fruit.currentPrice  
+    }
+```
 
+## 2. 다양한 컬렉션 처리 기능
 
+```kotlin
+// all : 조건을 모두 만족하면 true, 그렇지 않으면 falseval isAllApple = fruits.all { fruit -> fruit.name == "사과" }  
+  
+// none : 조건을 모두 불만족하면 true, 그렇지 않으면 falseval isNoApple = fruits.none { fruit -> fruit.name == "사과" }  
+  
+// any : 조건을 하나라도 만족하면 true, 그렇지 않으면 falseval isNoApple2 = fruits.any { fruit -> fruit.factoryPrice >= 10_000 }  
+  
+// count : 개수를 센다  
+val fruitCount = fruits.count()  
+  
+// sortedBy : (오름차순) 정렬을 한다.  
+val fruitCount2 = fruits.sortedBy { fruit -> fruit.currentPrice }  
+  
+// sortedByDescending : (내림차순) 정렬을 한다.  
+val fruitCount3 = fruits.sortedByDescending { fruit -> fruit.currentPrice }  
+  
+// distinctBy : 변형된 값을 기준으로 중복을 제거한다.  
+val distinctFruitNames = fruits.distinctBy { fruit -> fruit.name }  
+    .map { fruit -> fruit.name }  
+  
+// first : 첫번째 값을 가져온다 (무조건 null 이 아니어야 한다)  
+fruits.first()  
+  
+// firstOrNull : 첫번째 값 또는 null 을 가져온다.  
+fruits.firstOrNull()  
+  
+// last : 마지막 값을 가져온다 (무조건 null 이 아니어야 한다)  
+fruits.last()  
+  
+// lastOrNull : 첫번째 값 또는 null 을 가져온다.  
+fruits.lastOrNull()
+```
 
+## 3. List 를 Map 으로
+
+```kotlin
+// groupBy : value 에 리스트가 들어간다.  
+val map1: Map<String, List<Fruit>> = fruits.groupBy { fruits -> fruits.name }  
+  
+// associateBy : value 에 단일 객체가 들어간다.  
+val map2: Map<Long, Fruit> = fruits.associateBy { fruits -> fruits.id }  
+  
+// Key 와 Value 를 함께 다룰 수도 있다.  
+val map3: Map<String, List<Long>> = fruits  
+    .groupBy({ fruit -> fruit.name }, { fruit -> fruit.factoryPrice })  
+  
+// Key 와 Value 를 함께 다룰 수도 있다.  
+// 여기서 두 번쨰 중괄호는 소괄호 밖으로 뺄 수 있지만  
+// 함수형 파라미터를 두개 받는 경우에는 소괄호 안에 넣어주는 것이 convention 이다.  
+val map4: Map<Long, Long> = fruits  
+    .associateBy({ fruit -> fruit.id }, { fruit -> fruit.factoryPrice })
+```
+
+## 4. 중첩된 컬렉션 처리
+
+```kotlin
+val fruits = listOf(  
+    Fruit(1, "사과", 1_000L, 1_000L),  
+    Fruit(2, "사과", 1_200L, 1_200L),  
+    Fruit(3, "사과", 1_300L, 1_300L),  
+    Fruit(4, "사과", 1_400L, 1_400L),  
+    Fruit(5, "바나나", 3_000L, 3_000L),  
+    Fruit(6, "바나나", 3_200L, 3_200L),  
+    Fruit(7, "바나나", 2_500L, 2_500L),  
+    Fruit(8, "수박", 1_0000L, 1_0000L),  
+)  
+  
+val fruitsInList: List<List<Fruit>> = listOf(  
+    listOf(  
+        Fruit(1, "사과", 1_000L, 1_000L),  
+        Fruit(2, "사과", 1_200L, 1_200L),  
+        Fruit(3, "사과", 1_300L, 1_300L),  
+        Fruit(4, "사과", 1_400L, 1_400L),  
+    ),  
+    listOf(  
+        Fruit(5, "바나나", 3_000L, 3_000L),  
+        Fruit(6, "바나나", 3_200L, 3_200L),  
+        Fruit(7, "바나나", 2_500L, 2_500L),  
+    ),  
+    listOf(  
+        Fruit(8, "수박", 1_0000L, 1_0000L),  
+    )  
+)
+```
+
+```kotlin
+// flatMap : list 안의 element 들을 꺼낸다.  
+val samePriceFruits = fruitsInList.flatMap { list ->  
+    list.filter { fruit -> fruit.factoryPrice == fruit.currentPrice }  
+}  
+  
+// 위와 같이 람다가 중복되었을 떄 아래와 같이 바꾸어줄 수 있따.  
+  
+data class Fruit (  
+    val id: Long,  
+    val name: String,  
+    val factoryPrice: Long,  
+    val currentPrice: Long,  
+) {  
+    val isSamePrice: Boolean  
+        get() = factoryPrice == currentPrice  
+}  
+  
+val samePriceFruits2 = fruitsInList.flatMap { list -> list.samePriceFilter}  
+val List<Fruit>.samePriceFilter: List<Fruit>  
+    get() = this.filter(Fruit::isSamePrice)  
+  
+  
+// flatten : List<List<Fruit>> 와 같은 형태를 List<Fruit> 로 바꿀 떄 사용  
+fruitsInList.flatten()
+```
