update: 섹션 5. 추가적으로 알아두어야 할 코틀린 특성

--- a/01. Development/02. Lecture/자바 개발자를 위한 코틀린 입문/섹션 5. 추가적으로 알아두어야 할 코틀린 특성.md
+++ b/01. Development/02. Lecture/자바 개발자를 위한 코틀린 입문/섹션 5. 추가적으로 알아두어야 할 코틀린 특성.md
@@ -9,6 +9,71 @@ tags:
 ---
 # 19강. 코틀린의 이모저모
 
+## 1. Type Alias 와 as import
+
+### Type Alias
+
+- 긴 이름의 클래스 혹은 함수 타입이 있을 떄 축약하거나 더 좋은 이름을 쓰고 싶을 때는 어떻게 해야할까?
+
+- 예를들어, `(Fruit) -> Boolean` 이라는 타입은 너무 길다.
+	- 파라미터가 더 많아지면 감당하기 힘들 것 같다.
+	- ex) `(Fruit, Fruit, Fruit) -> Boolean`
+- 이럴 때 Type Alias 를 사용하면 된다.
+
+```kotlin
+fun filterFruits(fruits: List<Fruit>, filter: (Fruit) -> Boolean) {}
+// 위의 코드가 아래처럼 바뀐다.
+typealias FruitFilter = (Fruit) -> Boolean
+fun filterFruits(fruits: List<Fruit>, filter: FruitFilter) {}
+```
+
+- 이름 긴 클래스를 컬렉션에 사용할 때도 간단히 줄일 수 있다.
+
+```kotlin
+data class UltraSuperGuardianTribe(
+	val name: String
+)
+
+typealias USGTMap = Map<String, UltraSuperGuardianTribe>
+```
+
+### as import
+
+- 다른 패키지의 같은 이름 함수를 동시에 가져오고 싶다면 어떻게 해야할까?
+- 이럴 떄는 as import 를 사용해야 한다.
+- as import 를 사용하면 Import 와 동시에 이름을 바꿀 수 있다.
+
+> [!note] as import 란
+> 어떤 클래스나 함수를 import 할 떄 이름을 바꾸는 기능
+
+```kotlin
+import com.lannstark.lec19.a.aprintHelloWorld as printHelloWorldA
+import com.lannstark.lec19.b.aprintHelloWorld as printHelloWorldB
+
+fun main() {
+	printHelloWorldA()
+	printHelloWorldB()
+}
+```
+
+## 2. 구조 분해와 componentN 함수
+
+
+
+
+
+
+## 3. Jump 와 Label
+
+
+
+## 4. TakeIf 와 TakeUnless
+
+
+
+
+
+
 
 
 
