update: 섹션 5. 추가적으로 알아두어야 할 코틀린 특성

--- a/01. Development/02. Lecture/자바 개발자를 위한 코틀린 입문/섹션 5. 추가적으로 알아두어야 할 코틀린 특성.md
+++ b/01. Development/02. Lecture/자바 개발자를 위한 코틀린 입문/섹션 5. 추가적으로 알아두어야 할 코틀린 특성.md
@@ -58,10 +58,59 @@ fun main() {
 
 ## 2. 구조 분해와 componentN 함수
 
+> [!note] 구조 분해란
+> 복합적인 값을 분해하여 여러 변수를 한 번에 초기화하는 것
+
+```kotlin
+data class Person(
+	val name: String,
+	val age: Int
+)
+
+val person = Person("최태현", 100)
+val (name, age) = person
+```
+
+- Data Class 는 componentN 이란 함수도 자동으로 만들어준다.
+- 위 코드를 분해하면 아래와 같다.
+
+```kotlin
+// val (name, age) = pserson
+val name = person.component1()
+val age = person.component2()
+```
+
+- Data Class 는 기본적으로 자기가 가지고 있는 field 에 대해서 componentN 이라는 함수륾 만들어준다.
+	- 예를 들어, component1 은 첫 번째 프로퍼티를 가져오는 것이고
+	- component2 은 첫 번째 프로퍼티를 가져오는 것이다.
+- 구조분해 문법을 쓴다는 것은 componentN 함수를 호출한다는 뜻이다.
 
 
+- Data Class 가 아닌데 구조분해를 사용하고 싶다면, componentN 함수를 직접 구현해줄 수도 있다.
 
+```kotlin
+class Person(
+	val name: String,
+	val age: Int
+) {
+	operator fun component1(): String {
+		return this.name
+	}
 
+	operator fun component2(): Int {
+		return this.age
+	}
+}
+```
+
+- 참고로 아래 문법도 구조분해이다.
+
+```kotlin
+val map = mapOf(1 to "A", 2 to "B")
+for ((key, value) in map.entries) {
+
+}
+```
 
 ## 3. Jump 와 Label
 
