update: 섹션 5. 추가적으로 알아두어야 할 코틀린 특성

--- a/01. Development/02. Lecture/자바 개발자를 위한 코틀린 입문/섹션 5. 추가적으로 알아두어야 할 코틀린 특성.md
+++ b/01. Development/02. Lecture/자바 개발자를 위한 코틀린 입문/섹션 5. 추가적으로 알아두어야 할 코틀린 특성.md
@@ -114,7 +114,62 @@ for ((key, value) in map.entries) {
 
 ## 3. Jump 와 Label
 
+### Jump
 
+> [!note]
+> - return : 기본적으로 가장 가까운 enclosing function 또는 익명함수로 값이 반환된다.
+> - break : 가장 가까운 루프가 제거된다.
+> - continue : 가장 가까운 루프를 다음 step 으로 보낸다.
+
+- for 문 및 whilte 문에서 break, continue 기능은 동일하다.
+- 단, forEach 구문에서는 continue, break 를 쓸 수 없다.
+
+- 꼭 써야한다면 아래와 같이 써야한다.
+
+- break 를 쓰려면 run 이라는 블록으로 forEach 를 한번 감싼 뒤 return@run 으로 break 를 걸어야 한다.
+
+```kotlin
+val numbers = listOf(1, 2, 3, 4, 5)
+run {
+	numbers.forEach { number ->
+		if (number == 3) {
+			return@run
+		}
+		println(number)
+	}
+}
+```
+
+- continue 를 쓰려면 return@forEach 를 써야 한다.
+- return@forEach 는 continue 를 쓴 효과를 보여준다.
+
+```kotlin
+numbers.forEach { number ->
+	if (number == 2) {
+		return@forEach
+	}
+}
+```
+
+### Label
+
+- 위와 같은 기능들은 Kotlin 의 Label 이라는 기능을 이용한 것이다.
+- 특정 expression 에 `라벨이름@` 을 붙여 하나의 라벨로 간주하고, break, continue, return 등을 사용하는 기능
+
+- 만약 아래와 같이 `abc@` 라는 라벨을 달면 가장 밖에 있는 for 문이 break 된다.
+
+```kotlin
+abc@ for (i in 1..100) {  
+    for (j in 1..100) {  
+        if (j == 2) {  
+            break@abc  
+        }  
+    }  
+}
+```
+
+- 이렇게 Kotlin 은 Label 을 달 수 있는 기능과 return, continue, break 에 대해 특정 Label 에 대해 동작할 수 있게끔 하는 기능있다.
+- 라벨을 사용한 Jump 는 사용하지 말자.
 
 ## 4. TakeIf 와 TakeUnless
 
