update: 섹션 5. 추가적으로 알아두어야 할 코틀린 특성

--- a/01. Development/02. Lecture/자바 개발자를 위한 코틀린 입문/섹션 5. 추가적으로 알아두어야 할 코틀린 특성.md
+++ b/01. Development/02. Lecture/자바 개발자를 위한 코틀린 입문/섹션 5. 추가적으로 알아두어야 할 코틀린 특성.md
@@ -173,13 +173,23 @@ abc@ for (i in 1..100) {
 
 ## 4. TakeIf 와 TakeUnless
 
+- Kotlin 에서는 method chaning 을 위한 함수를 제공한다.
+- `takeIf` 는 주어진 조건을 만족하면 그 값이, 그렇지 않으면 null 이 반환된다.
+- `takeUnless` 는 주어진 조건을 만족하지 않으면 그 값이, 그렇지 않으면 null 이 반환된다.
 
-
-
-
-
-
-
+```kotlin
+fun getNumberOrNull(): Int? {
+	return if (number <= 0) {
+		null
+	} else {
+		number
+	}
+}
+// 위와 같은 코드를 아래와 같이 바꿀 수 있다.
+fun getNumberOrNullV2(): Int? {
+	return number.takeIf { it > 0 }
+}
+```
 
 # 20강. 코틀린의 scope function
 
