update: 섹션 5. 추가적으로 알아두어야 할 코틀린 특성

--- a/01. Development/02. Lecture/자바 개발자를 위한 코틀린 입문/섹션 5. 추가적으로 알아두어야 할 코틀린 특성.md
+++ b/01. Development/02. Lecture/자바 개발자를 위한 코틀린 입문/섹션 5. 추가적으로 알아두어야 할 코틀린 특성.md
@@ -193,6 +193,219 @@ fun getNumberOrNullV2(): Int? {
 
 # 20강. 코틀린의 scope function
 
+## 1. scope function 이란
+
+> [!note] scope function 이란
+> 람다를 사용해 일시적인 영역을 만들고, 코드를 더 간결하게 만들거나, method chaning 에 활용하는 함수이다.
+
+- let 이라는 scope function 을 이용하여 코드를 리팩토링 해보자.
+
+```kotlin
+fun printPerson(person: Person?) {
+	if (person != null) {
+		println(person.name)
+		println(person.age)
+	}
+}
+// 위 코드를 아래와 같이 바꾸었다.
+fun printPerson(person: Person?) {
+	person?.let { // SafeCall (?.) 을 사용하여 person 이 null 이 아닐 때에 let 을 호출
+		println(it.name)
+		println(it.age)
+	}
+}
+```
+
+## 2. scope function 의 분류
+
+아래 있는 scope function 들은 모두 [[섹션 4. 코틀린에서의 FP#1. 확장 함수|확장함수]]이다.
+
+- `let`
+	- 람다를 받아, 람다의 결과를 반환한다
+	- `it` 사용
+- `run`
+	- 람다의 결과를 반환한다
+	- `this` 사용
+- `also`
+	- 람다의 결과와 무관하게 객체 그 자체를 반환한다
+	- `it` 사용
+- `apply`
+	- 람다의 결과와 무관하게 객체 그 자체를 반환한다
+	- `this` 사용
+
+> [!tip]
+> - this : 생략이 가능한 대신, 다른 이름을 붙일 수 없다.
+> - it : 생략이 불가능한 대신, 다름 이름을 붙일 수 있다.
+> - 이런 차이가 발생한 이유는 내부 구현의 차이 때문이다.
+> 	- let 은 일반 함수를 받기 때문에 파라미터를 받아서 파라미터에 대한 이름을 직접 넣어줄 수 있다.
+> 	- run 은 확장 함수를 받기 때문에 this 를 넣으며 생략할 수 있다.
+
+```kotlin
+val value1 = person.let { // age 를 반환한다.
+	it.age
+}
+// let 은 it 을 사용하기 떄문에 아래와 같이 쓸수도 있다.
+// val value1 = person.let { p ->
+// 	 p.age
+// }
+
+val value2 = person.run { // age 를 반환한다.
+	this.age // 그냥 age 만 써도 된다.
+}
+
+val value3 = person.also { // person 이 반환된다.
+	it.age 
+}
+
+val value4 = person.apply { // person 이 반환된다.
+	this.age
+}
+```
 
 
+다만 이 scope function 만 확장함수가 아니다.
+- `with(파라미터, 람다)` : this 를 사용해 접근하고, this 는 생략 가능하다.
+
+```kotlin
+val person = Person("최태현", 100)
+with(person) {
+	println(name)
+	println(this.age)
+}
+```
+
+## 3. 언제 어떤 scope function 을 사용해야 할까
+
+### let
+
+- 하나 이상의 함수를 call chain 결과로 호출 할 때
+- non-null 값에 대해서만 code block 을 실행시킬 때
+- 일회성으로 제한된 영역에 지역 변수를 만들 때
+
+```kotlin
+val strings = listOf("APPLE", "CAR")
+strings.map { it.length }
+	.filter { it > 3 }
+	.let(::println)
+
+// 위 코드를 아래와 같이 바꿀 수 있다.
+
+val strings = listOf("APPLE", "CAR")
+strings.map { it.length }
+	.filter { it > 3 }
+	.let { lengths -> println(lengths) }
+```
+
+```kotlin
+val length = str?.let { // str 이 null 일 수도 있는 상황에서 이렇게 부를 수 있다.
+	println(it.uppercase())
+	it.length
+}
+```
+
+```kotlin
+val numbers = listOf("one", "two", "three", "four")
+val modifiedFirstItem = numbers.first()
+	.let { firstItem -> // scope 영역에 지역변수를 만들었다.
+		if (firstItem.length >= 5) {
+			firstItem
+		} else {
+			"!$firstItem!"
+		}
+	}.uppercase()
+println(modifiedFirstItem)
+```
+
+### run
+
+- 객체 초기화와 반환 값의 계산을 동시에 해야 할 때 사용한다.
+
+```kotlin
+// 객체를 만들어 DB 에 바로 저장하고, 그 인스턴스를 활용할 때 이렇게 할 수 있다.
+val person = Person("최태현", 100).run(personRepository::save)
+```
+
+```kotlin
+// 객체를 만들어 DB에 바로 저장하고, 그 인스턴스를 활용하는 방식
+val person = Person("최태현", 100).run { 
+	hobby = "독서"
+	personRepository.save(this)
+}
+```
+
+### apply
+
+- 객체 설정을 할 때에 객체를 수정하는 로직이 call chain 중간에 필요할 때 사용한다.
+
+```kotlin
+fun createPerson(
+	name: String,
+	age: Int,
+	hobby: String,
+): Person {
+	return Person(
+		name = name,
+		age = age,
+	).apply { // hobby 설정이 생성자에 없어서 apply 로 hobby 설정 코드를 추가해주었다.
+		this.hobby = hobby
+	}
+}
+```
+
+- 아래와 같은 코드도 가능은 하다.
+
+```kotlin
+val person = Person("최태현", 100)
+person.apply { this.growOld() }
+	.let { println(it) }
+```
+
+### also
+
+- 객체를 수정하는 로직이 call chain 중간에 필요할 때 사용한다.
+
+```kotlin
+mutableListOf("one", "two", "three")
+	.also { println("four 추가 이전 지금 값: $it") }
+	.add("four")
+```
+
+### with
+
+- 특정 객체를 다른 객체로 변환해야 하는데, 모듈 간의 의존성에 의해 정적 팩토리 혹은 toClass 함수를 만들기 어려울 때 사용한다.
+
+- 아래 코드에서는 원래 `name = person.name` 과 같은 식으로 써야 했지만 with 에서는 this 를 생략할 수 있어서 필드가 많아도 코드가 간결해진다.
+
+```kotlin
+return with(person) {
+	PersonDto(
+		name = name,
+		age = age,
+	)
+}
+```
+
+## 4. scope function 과 가독성
+
+- 아래 두 코드 중 어떤 코드가 더 가독성이 좋을까?
+- 1번이 훨씬 좋다.
+	- 2번은 숙련된 코틀린 개발자만 알아볼 수 있기 때문이다.
+	- 1번이 디버깅이 쉽다
+	- 1이 수정도 더 쉽다.
+
+```kotlin
+// 1번 코드
+if (person != null && person.isAdult) {
+	view.shorPerson(person)
+} else {
+	view.showError()
+}
+
+// 2번 코드
+person?.takeIf { it.isAdult }
+	?.let(view::showPerson)
+	?: view.showError()
+```
+
+- 사용 빈도가 적은 관용구는 코드를 더 복잡하게 만들고 이런 관용구들을 한 문장 내에서 조합해 사용하면 복잡성이 훨씬 증가한다.
 
