update: 16. 향상된 서버 만들기

--- a/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
+++ b/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/16장. 향상된 서버 만들기.md
@@ -8,10 +8,11 @@ tags:
 ---
 # 01. 들어기에 앞서
 
-
-
+- NIO 에서 제공해주는 단순한 형태로 서버를 만들면 성능 극대화에 장애가 되는 부분들이 발생한다.
+- 이 장에서는 그런 부분에 대해 이야기하고, 해결책에 대해 설명한다.
 
 # 02. 효율적인 메모리 사용
+
 
 
 
